# stereo_extrinsic_calibration

./: CLAUDE.md  CMakeLists.txt  README.md  package.xml
config/: camera_params.yaml
include/: stereo_calibration.h  stereo_calibration_param.h
include/stereo_extrinsic_calibration/: feature_matcher.h  stereo_calibrator.h
launch/: stereo_calibration.launch
src/: feature_matcher.cpp  stereo_calibration.cpp  stereo_calibration_node.cpp  stereo_calibration_param.cpp  stereo_calibrator.cpp
test/: generate_test_data.cpp  test_stereo_calibration.cpp
